third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/invalid-hex-1.stderr
TOML parse error at line 1, column 22
  |
1 | invalid-hex-1 = 0xaafz
  |                      ^
expected newline, `#`
